[gd_scene load_steps=8 format=4 uid="uid://b0cpdvp1u6sww"]

[ext_resource type="Script" path="res://chess/chess_board.gd" id="1_c3dqo"]
[ext_resource type="PackedScene" uid="uid://c4xc0lq2ri2uh" path="res://chess/white_square.tscn" id="1_pbe4n"]
[ext_resource type="TileSet" uid="uid://cyhy3cyngvo3c" path="res://trump/TrumpTileset.tres" id="2_7l4lh"]
[ext_resource type="PackedScene" uid="uid://tryj0wk3d1hy" path="res://UI/chessboard_ui.tscn" id="4_7dkvb"]
[ext_resource type="TileSet" uid="uid://87tt0y4pnab" path="res://chess/chesspiece/ChessTileset.tres" id="4_tk361"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_wysms"]
resource_name = "White Square"
scenes/1/scene = ExtResource("1_pbe4n")

[sub_resource type="TileSet" id="TileSet_7c3te"]
tile_size = Vector2i(64, 64)
sources/1 = SubResource("TileSetScenesCollectionSource_wysms")

[node name="ChessBoard" type="Node2D"]
script = ExtResource("1_c3dqo")

[node name="WhiteAndBlack" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AADw//D/AQAAAAAAAQDw//L/AQAAAAAAAQDw//T/AQAAAAAAAQDw//b/AQAAAAAAAQDw//j/AQAAAAAAAQDw//r/AQAAAAAAAQDw//z/AQAAAAAAAQDw//7/AQAAAAAAAQDw/wAAAQAAAAAAAQDw/wIAAQAAAAAAAQDw/wQAAQAAAAAAAQDw/wYAAQAAAAAAAQDw/wgAAQAAAAAAAQDw/woAAQAAAAAAAQDw/wwAAQAAAAAAAQDw/w4AAQAAAAAAAQDx//H/AQAAAAAAAQDx//P/AQAAAAAAAQDx//X/AQAAAAAAAQDx//f/AQAAAAAAAQDx//n/AQAAAAAAAQDx//v/AQAAAAAAAQDx//3/AQAAAAAAAQDx////AQAAAAAAAQDx/wEAAQAAAAAAAQDx/wMAAQAAAAAAAQDx/wUAAQAAAAAAAQDx/wcAAQAAAAAAAQDx/wkAAQAAAAAAAQDx/wsAAQAAAAAAAQDx/w0AAQAAAAAAAQDx/w8AAQAAAAAAAQDy//D/AQAAAAAAAQDy//L/AQAAAAAAAQDy//T/AQAAAAAAAQDy//b/AQAAAAAAAQDy//j/AQAAAAAAAQDy//r/AQAAAAAAAQDy//z/AQAAAAAAAQDy//7/AQAAAAAAAQDy/wAAAQAAAAAAAQDy/wIAAQAAAAAAAQDy/wQAAQAAAAAAAQDy/wYAAQAAAAAAAQDy/wgAAQAAAAAAAQDy/woAAQAAAAAAAQDy/wwAAQAAAAAAAQDy/w4AAQAAAAAAAQDz//H/AQAAAAAAAQDz//P/AQAAAAAAAQDz//X/AQAAAAAAAQDz//f/AQAAAAAAAQDz//n/AQAAAAAAAQDz//v/AQAAAAAAAQDz//3/AQAAAAAAAQDz////AQAAAAAAAQDz/wEAAQAAAAAAAQDz/wMAAQAAAAAAAQDz/wUAAQAAAAAAAQDz/wcAAQAAAAAAAQDz/wkAAQAAAAAAAQDz/wsAAQAAAAAAAQDz/w0AAQAAAAAAAQDz/w8AAQAAAAAAAQD0//D/AQAAAAAAAQD0//L/AQAAAAAAAQD0//T/AQAAAAAAAQD0//b/AQAAAAAAAQD0//j/AQAAAAAAAQD0//r/AQAAAAAAAQD0//z/AQAAAAAAAQD0//7/AQAAAAAAAQD0/wAAAQAAAAAAAQD0/wIAAQAAAAAAAQD0/wQAAQAAAAAAAQD0/wYAAQAAAAAAAQD0/wgAAQAAAAAAAQD0/woAAQAAAAAAAQD0/wwAAQAAAAAAAQD0/w4AAQAAAAAAAQD1//H/AQAAAAAAAQD1//P/AQAAAAAAAQD1//X/AQAAAAAAAQD1//f/AQAAAAAAAQD1//n/AQAAAAAAAQD1//v/AQAAAAAAAQD1//3/AQAAAAAAAQD1////AQAAAAAAAQD1/wEAAQAAAAAAAQD1/wMAAQAAAAAAAQD1/wUAAQAAAAAAAQD1/wcAAQAAAAAAAQD1/wkAAQAAAAAAAQD1/wsAAQAAAAAAAQD1/w0AAQAAAAAAAQD1/w8AAQAAAAAAAQD2//D/AQAAAAAAAQD2//L/AQAAAAAAAQD2//T/AQAAAAAAAQD2//b/AQAAAAAAAQD2//j/AQAAAAAAAQD2//r/AQAAAAAAAQD2//z/AQAAAAAAAQD2//7/AQAAAAAAAQD2/wAAAQAAAAAAAQD2/wIAAQAAAAAAAQD2/wQAAQAAAAAAAQD2/wYAAQAAAAAAAQD2/wgAAQAAAAAAAQD2/woAAQAAAAAAAQD2/wwAAQAAAAAAAQD2/w4AAQAAAAAAAQD3//H/AQAAAAAAAQD3//P/AQAAAAAAAQD3//X/AQAAAAAAAQD3//f/AQAAAAAAAQD3//n/AQAAAAAAAQD3//v/AQAAAAAAAQD3//3/AQAAAAAAAQD3////AQAAAAAAAQD3/wEAAQAAAAAAAQD3/wMAAQAAAAAAAQD3/wUAAQAAAAAAAQD3/wcAAQAAAAAAAQD3/wkAAQAAAAAAAQD3/wsAAQAAAAAAAQD3/w0AAQAAAAAAAQD3/w8AAQAAAAAAAQD4//D/AQAAAAAAAQD4//L/AQAAAAAAAQD4//T/AQAAAAAAAQD4//b/AQAAAAAAAQD4//j/AQAAAAAAAQD4//r/AQAAAAAAAQD4//z/AQAAAAAAAQD4//7/AQAAAAAAAQD4/wAAAQAAAAAAAQD4/wIAAQAAAAAAAQD4/wQAAQAAAAAAAQD4/wYAAQAAAAAAAQD4/wgAAQAAAAAAAQD4/woAAQAAAAAAAQD4/wwAAQAAAAAAAQD4/w4AAQAAAAAAAQD5//H/AQAAAAAAAQD5//P/AQAAAAAAAQD5//X/AQAAAAAAAQD5//f/AQAAAAAAAQD5//n/AQAAAAAAAQD5//v/AQAAAAAAAQD5//3/AQAAAAAAAQD5////AQAAAAAAAQD5/wEAAQAAAAAAAQD5/wMAAQAAAAAAAQD5/wUAAQAAAAAAAQD5/wcAAQAAAAAAAQD5/wkAAQAAAAAAAQD5/wsAAQAAAAAAAQD5/w0AAQAAAAAAAQD5/w8AAQAAAAAAAQD6//D/AQAAAAAAAQD6//L/AQAAAAAAAQD6//T/AQAAAAAAAQD6//b/AQAAAAAAAQD6//j/AQAAAAAAAQD6//r/AQAAAAAAAQD6//z/AQAAAAAAAQD6//7/AQAAAAAAAQD6/wAAAQAAAAAAAQD6/wIAAQAAAAAAAQD6/wQAAQAAAAAAAQD6/wYAAQAAAAAAAQD6/wgAAQAAAAAAAQD6/woAAQAAAAAAAQD6/wwAAQAAAAAAAQD6/w4AAQAAAAAAAQD7//H/AQAAAAAAAQD7//P/AQAAAAAAAQD7//X/AQAAAAAAAQD7//f/AQAAAAAAAQD7//n/AQAAAAAAAQD7//v/AQAAAAAAAQD7//3/AQAAAAAAAQD7////AQAAAAAAAQD7/wEAAQAAAAAAAQD7/wMAAQAAAAAAAQD7/wUAAQAAAAAAAQD7/wcAAQAAAAAAAQD7/wkAAQAAAAAAAQD7/wsAAQAAAAAAAQD7/w0AAQAAAAAAAQD7/w8AAQAAAAAAAQD8//D/AQAAAAAAAQD8//L/AQAAAAAAAQD8//T/AQAAAAAAAQD8//b/AQAAAAAAAQD8//j/AQAAAAAAAQD8//r/AQAAAAAAAQD8//z/AQAAAAAAAQD8//7/AQAAAAAAAQD8/wAAAQAAAAAAAQD8/wIAAQAAAAAAAQD8/wQAAQAAAAAAAQD8/wYAAQAAAAAAAQD8/wgAAQAAAAAAAQD8/woAAQAAAAAAAQD8/wwAAQAAAAAAAQD8/w4AAQAAAAAAAQD9//H/AQAAAAAAAQD9//P/AQAAAAAAAQD9//X/AQAAAAAAAQD9//f/AQAAAAAAAQD9//n/AQAAAAAAAQD9//v/AQAAAAAAAQD9//3/AQAAAAAAAQD9////AQAAAAAAAQD9/wEAAQAAAAAAAQD9/wMAAQAAAAAAAQD9/wUAAQAAAAAAAQD9/wcAAQAAAAAAAQD9/wkAAQAAAAAAAQD9/wsAAQAAAAAAAQD9/w0AAQAAAAAAAQD9/w8AAQAAAAAAAQD+//D/AQAAAAAAAQD+//L/AQAAAAAAAQD+//T/AQAAAAAAAQD+//b/AQAAAAAAAQD+//j/AQAAAAAAAQD+//r/AQAAAAAAAQD+//z/AQAAAAAAAQD+//7/AQAAAAAAAQD+/wAAAQAAAAAAAQD+/wIAAQAAAAAAAQD+/wQAAQAAAAAAAQD+/wYAAQAAAAAAAQD+/wgAAQAAAAAAAQD+/woAAQAAAAAAAQD+/wwAAQAAAAAAAQD+/w4AAQAAAAAAAQD///H/AQAAAAAAAQD///P/AQAAAAAAAQD///X/AQAAAAAAAQD///f/AQAAAAAAAQD///n/AQAAAAAAAQD///v/AQAAAAAAAQD///3/AQAAAAAAAQD/////AQAAAAAAAQD//wEAAQAAAAAAAQD//wMAAQAAAAAAAQD//wUAAQAAAAAAAQD//wcAAQAAAAAAAQD//wkAAQAAAAAAAQD//wsAAQAAAAAAAQD//w0AAQAAAAAAAQD//w8AAQAAAAAAAQAAAPD/AQAAAAAAAQAAAPL/AQAAAAAAAQAAAPT/AQAAAAAAAQAAAPb/AQAAAAAAAQAAAPj/AQAAAAAAAQAAAPr/AQAAAAAAAQAAAPz/AQAAAAAAAQAAAP7/AQAAAAAAAQAAAAAAAQAAAAAAAQAAAAIAAQAAAAAAAQAAAAQAAQAAAAAAAQAAAAYAAQAAAAAAAQAAAAgAAQAAAAAAAQAAAAoAAQAAAAAAAQAAAAwAAQAAAAAAAQAAAA4AAQAAAAAAAQABAPH/AQAAAAAAAQABAPP/AQAAAAAAAQABAPX/AQAAAAAAAQABAPf/AQAAAAAAAQABAPn/AQAAAAAAAQABAPv/AQAAAAAAAQABAP3/AQAAAAAAAQABAP//AQAAAAAAAQABAAEAAQAAAAAAAQABAAMAAQAAAAAAAQABAAUAAQAAAAAAAQABAAcAAQAAAAAAAQABAAkAAQAAAAAAAQABAAsAAQAAAAAAAQABAA0AAQAAAAAAAQABAA8AAQAAAAAAAQACAPD/AQAAAAAAAQACAPL/AQAAAAAAAQACAPT/AQAAAAAAAQACAPb/AQAAAAAAAQACAPj/AQAAAAAAAQACAPr/AQAAAAAAAQACAPz/AQAAAAAAAQACAP7/AQAAAAAAAQACAAAAAQAAAAAAAQACAAIAAQAAAAAAAQACAAQAAQAAAAAAAQACAAYAAQAAAAAAAQACAAgAAQAAAAAAAQACAAoAAQAAAAAAAQACAAwAAQAAAAAAAQACAA4AAQAAAAAAAQADAPH/AQAAAAAAAQADAPP/AQAAAAAAAQADAPX/AQAAAAAAAQADAPf/AQAAAAAAAQADAPn/AQAAAAAAAQADAPv/AQAAAAAAAQADAP3/AQAAAAAAAQADAP//AQAAAAAAAQADAAEAAQAAAAAAAQADAAMAAQAAAAAAAQADAAUAAQAAAAAAAQADAAcAAQAAAAAAAQADAAkAAQAAAAAAAQADAAsAAQAAAAAAAQADAA0AAQAAAAAAAQADAA8AAQAAAAAAAQAEAPD/AQAAAAAAAQAEAPL/AQAAAAAAAQAEAPT/AQAAAAAAAQAEAPb/AQAAAAAAAQAEAPj/AQAAAAAAAQAEAPr/AQAAAAAAAQAEAPz/AQAAAAAAAQAEAP7/AQAAAAAAAQAEAAAAAQAAAAAAAQAEAAIAAQAAAAAAAQAEAAQAAQAAAAAAAQAEAAYAAQAAAAAAAQAEAAgAAQAAAAAAAQAEAAoAAQAAAAAAAQAEAAwAAQAAAAAAAQAEAA4AAQAAAAAAAQAFAPH/AQAAAAAAAQAFAPP/AQAAAAAAAQAFAPX/AQAAAAAAAQAFAPf/AQAAAAAAAQAFAPn/AQAAAAAAAQAFAPv/AQAAAAAAAQAFAP3/AQAAAAAAAQAFAP//AQAAAAAAAQAFAAEAAQAAAAAAAQAFAAMAAQAAAAAAAQAFAAUAAQAAAAAAAQAFAAcAAQAAAAAAAQAFAAkAAQAAAAAAAQAFAAsAAQAAAAAAAQAFAA0AAQAAAAAAAQAFAA8AAQAAAAAAAQAGAPD/AQAAAAAAAQAGAPL/AQAAAAAAAQAGAPT/AQAAAAAAAQAGAPb/AQAAAAAAAQAGAPj/AQAAAAAAAQAGAPr/AQAAAAAAAQAGAPz/AQAAAAAAAQAGAP7/AQAAAAAAAQAGAAAAAQAAAAAAAQAGAAIAAQAAAAAAAQAGAAQAAQAAAAAAAQAGAAYAAQAAAAAAAQAGAAgAAQAAAAAAAQAGAAoAAQAAAAAAAQAGAAwAAQAAAAAAAQAGAA4AAQAAAAAAAQAHAPH/AQAAAAAAAQAHAPP/AQAAAAAAAQAHAPX/AQAAAAAAAQAHAPf/AQAAAAAAAQAHAPn/AQAAAAAAAQAHAPv/AQAAAAAAAQAHAP3/AQAAAAAAAQAHAP//AQAAAAAAAQAHAAEAAQAAAAAAAQAHAAMAAQAAAAAAAQAHAAUAAQAAAAAAAQAHAAcAAQAAAAAAAQAHAAkAAQAAAAAAAQAHAAsAAQAAAAAAAQAHAA0AAQAAAAAAAQAHAA8AAQAAAAAAAQAIAPD/AQAAAAAAAQAIAPL/AQAAAAAAAQAIAPT/AQAAAAAAAQAIAPb/AQAAAAAAAQAIAPj/AQAAAAAAAQAIAPr/AQAAAAAAAQAIAPz/AQAAAAAAAQAIAP7/AQAAAAAAAQAIAAAAAQAAAAAAAQAIAAIAAQAAAAAAAQAIAAQAAQAAAAAAAQAIAAYAAQAAAAAAAQAIAAgAAQAAAAAAAQAIAAoAAQAAAAAAAQAIAAwAAQAAAAAAAQAIAA4AAQAAAAAAAQAJAPH/AQAAAAAAAQAJAPP/AQAAAAAAAQAJAPX/AQAAAAAAAQAJAPf/AQAAAAAAAQAJAPn/AQAAAAAAAQAJAPv/AQAAAAAAAQAJAP3/AQAAAAAAAQAJAP//AQAAAAAAAQAJAAEAAQAAAAAAAQAJAAMAAQAAAAAAAQAJAAUAAQAAAAAAAQAJAAcAAQAAAAAAAQAJAAkAAQAAAAAAAQAJAAsAAQAAAAAAAQAJAA0AAQAAAAAAAQAJAA8AAQAAAAAAAQAKAPD/AQAAAAAAAQAKAPL/AQAAAAAAAQAKAPT/AQAAAAAAAQAKAPb/AQAAAAAAAQAKAPj/AQAAAAAAAQAKAPr/AQAAAAAAAQAKAPz/AQAAAAAAAQAKAP7/AQAAAAAAAQAKAAAAAQAAAAAAAQAKAAIAAQAAAAAAAQAKAAQAAQAAAAAAAQAKAAYAAQAAAAAAAQAKAAgAAQAAAAAAAQAKAAoAAQAAAAAAAQAKAAwAAQAAAAAAAQAKAA4AAQAAAAAAAQALAPH/AQAAAAAAAQALAPP/AQAAAAAAAQALAPX/AQAAAAAAAQALAPf/AQAAAAAAAQALAPn/AQAAAAAAAQALAPv/AQAAAAAAAQALAP3/AQAAAAAAAQALAP//AQAAAAAAAQALAAEAAQAAAAAAAQALAAMAAQAAAAAAAQALAAUAAQAAAAAAAQALAAcAAQAAAAAAAQALAAkAAQAAAAAAAQALAAsAAQAAAAAAAQALAA0AAQAAAAAAAQALAA8AAQAAAAAAAQAMAPD/AQAAAAAAAQAMAPL/AQAAAAAAAQAMAPT/AQAAAAAAAQAMAPb/AQAAAAAAAQAMAPj/AQAAAAAAAQAMAPr/AQAAAAAAAQAMAPz/AQAAAAAAAQAMAP7/AQAAAAAAAQAMAAAAAQAAAAAAAQAMAAIAAQAAAAAAAQAMAAQAAQAAAAAAAQAMAAYAAQAAAAAAAQAMAAgAAQAAAAAAAQAMAAoAAQAAAAAAAQAMAAwAAQAAAAAAAQAMAA4AAQAAAAAAAQANAPH/AQAAAAAAAQANAPP/AQAAAAAAAQANAPX/AQAAAAAAAQANAPf/AQAAAAAAAQANAPn/AQAAAAAAAQANAPv/AQAAAAAAAQANAP3/AQAAAAAAAQANAP//AQAAAAAAAQANAAEAAQAAAAAAAQANAAMAAQAAAAAAAQANAAUAAQAAAAAAAQANAAcAAQAAAAAAAQANAAkAAQAAAAAAAQANAAsAAQAAAAAAAQANAA0AAQAAAAAAAQANAA8AAQAAAAAAAQAOAPD/AQAAAAAAAQAOAPL/AQAAAAAAAQAOAPT/AQAAAAAAAQAOAPb/AQAAAAAAAQAOAPj/AQAAAAAAAQAOAPr/AQAAAAAAAQAOAPz/AQAAAAAAAQAOAP7/AQAAAAAAAQAOAAAAAQAAAAAAAQAOAAIAAQAAAAAAAQAOAAQAAQAAAAAAAQAOAAYAAQAAAAAAAQAOAAgAAQAAAAAAAQAOAAoAAQAAAAAAAQAOAAwAAQAAAAAAAQAOAA4AAQAAAAAAAQAPAPH/AQAAAAAAAQAPAPP/AQAAAAAAAQAPAPX/AQAAAAAAAQAPAPf/AQAAAAAAAQAPAPn/AQAAAAAAAQAPAPv/AQAAAAAAAQAPAP3/AQAAAAAAAQAPAP//AQAAAAAAAQAPAAEAAQAAAAAAAQAPAAMAAQAAAAAAAQAPAAUAAQAAAAAAAQAPAAcAAQAAAAAAAQAPAAkAAQAAAAAAAQAPAAsAAQAAAAAAAQAPAA0AAQAAAAAAAQAPAA8AAQAAAAAAAQA=")
tile_set = SubResource("TileSet_7c3te")

[node name="Trump" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAQADAAEAAAAAAAAAAQAIAAIAAAAAAAAAAwAMAAMAAAAAAAAAAwAGAP//AAAAAAAAAwAAAAMAAAAAAAAAAwANAAAAAAAAAAAAAwAFAAIAAAAAAAAAAgAIAP//AAAAAAAAAgAKAAIAAAAAAAAAAgAHAAIAAAAAAAAAAQAHAAMAAAAAAAAAAQAIAAMAAAAAAAAAAQAJAAMAAAAAAAAABAAJAAIAAAAAAAAABAAIAAEAAAAAAAAABAADAAIAAAAAAAAAAgADAAMAAAAAAAAAAgA=")
tile_set = ExtResource("2_7l4lh")

[node name="ChessPiece" type="TileMapLayer" parent="."]
position = Vector2(-30, -40)
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAQADAAEAAAAAAAAAAQAIAAIAAQAAAAAAAQAMAAMAAAAAAAAAAwAGAP//AAAAAAAAAwAAAAMAAAAAAAAAAwANAAAAAAAAAAAAAwAFAAIAAAAAAAAAAgAIAP//AAAAAAAAAgAKAAIAAAAAAAAAAgAHAAIAAAAAAAAAAQAHAAMAAAAAAAAAAgAIAAMAAAAAAAAAAQAJAAMAAAAAAAAABAAJAAIAAAAAAAAABAAIAAEAAAAAAAAABAADAAIAAAAAAAAAAgADAAMAAAAAAAAAAgAGAAMAAAAAAAAAAQAIAAQAAAAAAAAAAwALAAQAAAAAAAAABAANAAMAAAAAAAAABQA=")
tile_set = ExtResource("4_tk361")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 50)
limit_left = -1088
limit_top = -1088
limit_right = 1088
limit_bottom = 1088

[node name="UI" parent="." instance=ExtResource("4_7dkvb")]

[node name="TurnsTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="TurnsTimer" to="." method="_on_turns_timer_timeout"]
